# shop_services

./: Procfile  README.md  gateway.py  pyproject.toml
commerce_manager/: __init__.py  logger.py  models.py  settings.py
commerce_manager/warehouse/ old/: __init__.py  common_pb2.py  data.py  gateway.py  goods_manager_pb2.py  goods_manager_pb2_grpc.py  models.py  shop_manager_pb2.py  shop_manager_pb2_grpc.py  warehouse_manager_pb2.py  warehouse_manager_pb2_grpc.py
commerce_manager/warehouse/ old/proto/: common.proto  goods_manager.proto  shop_manager.proto  warehouse_manager.proto
commerce_manager/warehouse/json_rpc/: __init__.py  data.py  handlers.py
deploy/: gunicorn.ini  init.sql
migrations/models/: 0_20230409153427_init.py  0_20230413160338_init.py
