[tool.poetry]
name = "commerce_manager"
version = "0.0.1"
description = "Comerce managing apps"
authors = ["Ilya Demintsev <idemintsev@gmail.com>"]
repository = "https://github.com/idemintsev/shop_services"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

attrs = "22.1.*"
attrs-mate = "1.0.*"
pendulum = "2.1.*"
orjson = "3.8.*"

aiohttp = "3.8.*"
aiohttp-rpc = "1.1.*"
gunicorn = "20.*"

asyncclick = "8.1.*"

tortoise-orm = "0.19.*"
aerich = "0.7.*"
asyncpg = "0.27.*"
dramatiq = {extras = ["redis"], version = "1.14.*"}

anyio = "3.6.*"
uvloop = "0.17.*"

[tool.poetry.group.dev.dependencies]
pytest = "7.*"
pytest-aiohttp = "1.*"
pytest-mock = "3.*"
trafaret = "2.*"
honcho = "*"
mypy = "1.*"


[tool.aerich]
tortoise_orm = "commerce_manager.settings.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
